Implement project manager

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,4 +10,5 @@
 @import './components/editor.css';
 @import './components/preview.css';
 @import './components/uniforms.css';
-@import './components/examples.css'; 
+@import './components/examples.css';
+@import './components/project-browser.css'; 
